<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.asbestosstar</groupId>
	<artifactId>crashdetectormc</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<build>
		<plugins>

			<!-- Add the Maven Compiler Plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
					<compilerArgs>
						<!-- Disable annotation processing -->
						<arg>-proc:none</arg>
						<!-- Suppress the warning message -->
						<arg>-Xlint:-options</arg>
					</compilerArgs>
				</configuration>
			</plugin>


			<!-- other plugins omitted -->
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.4.2</version>
				<configuration>
					<archive>
						<manifestEntries>
							<Premain-Class>
								com.asbestosstar.crashdetector.CrashDetectorFCMC
							</Premain-Class>
							<Can-Redefine-Classes>true</Can-Redefine-Classes>
							<Can-Retransform-Classes>true</Can-Retransform-Classes>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<!-- Gson Dependency -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.10.1</version>
		</dependency>

		<!-- Guava Dependency -->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>31.1-jre</version>
		</dependency>

		<!-- Existing Dependencies -->
		<dependency>
			<groupId>net.fabricmc</groupId>
			<artifactId>fabric-loader</artifactId>
			<version>0.15.7</version>
		</dependency>
	
 	<dependency>
	
 		<groupId>cpw.mods</groupId>
	
 		<artifactId>modlauncher</artifactId>
	
 		<version>8.1.3</version>
	
 	</dependency>
	
 	 	 <dependency>
	
 	 		<groupId>cpw.mods</groupId>
	
 	 		<artifactId>modlauncher</artifactId>
	
 	 		<version>0.10.0</version>
	
 	 		<classifier>api</classifier>
	
 	 	</dependency>
	
	<dependency>
	
 		<groupId>cpw.mods</groupId>
	
 		<artifactId>grossjava9hacks</artifactId>
	
 		<version>1.3.3</version>
	
 	</dependency>
		<dependency>
			<groupId>net.minecraftforge</groupId>
			<artifactId>forgespi</artifactId>
			<version>6.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.spongepowered</groupId>
			<artifactId>mixin</artifactId>
			<version>0.8.5</version>
		</dependency>
		<dependency>
			<groupId>com.asbestosstar</groupId>
			<artifactId>featurecreep-loader</artifactId>
			<version>4.0pre19</version>
		</dependency>




		<!-- existe porque una limitacion de nivel src para servicio modlauncher
		. TODO publicar en Central
		<dependency>
			<groupId>com.github.Asbestosstar</groupId>
			<artifactId>special-waffle</artifactId>
			<version>0</version>
			<scope>compile</scope>
		</dependency>-->


	</dependencies>
	<repositories>
		<repository>
			<id>jitpack.io</id>
			<url>https://www.jitpack.io</url>
		</repository>
		<repository>
			<id>velocity</id>
			<name>velocity</name>
			<url>https://nexus.velocitypowered.com/repository/maven-public/</url>
		</repository>
		<repository>
			<id>cursemaven</id>
			<name>cursemaven</name>
			<url>https://cursemaven.com</url>
		</repository>
	</repositories>
	<properties>
		<maven.compiler.target>1.8</maven.compiler.target>
		<maven.compiler.source>1.8</maven.compiler.source>
		
	</properties>
</project>